--- a/diensten.html
+++ b/diensten.html
@@ -19,6 +19,8 @@ redirect_from:
                 <li>Engineering</li>
                 <li>Inspecties</li>
                 <li>Werkvoorbereiding</li>
+                <li>Duurzame energie</li>
+                <li>Energiebesparing</li>
             </ul>
         </div>
     </div>
@@ -55,6 +57,7 @@ redirect_from:
                 <li>Inbraakinstallaties</li>
                 <li>Brandmeldinginstallaties</li>
                 <li>Ontruimingsinstallaties</li>
+                <li>Zonnepaneelinstallaties</li>
             </ul>
         </div>
     </div>
@@ -73,6 +76,7 @@ redirect_from:
         <div class="card-body">
             <ul class="card-text">
                 <li>NEN3140</li>
+                <li>NEN1010</li>
             </ul>
       </div>
     </div>
@@ -84,6 +88,7 @@ redirect_from:
                 <li>Airco-installaties</li>
                 <li>Mechanische ventilatiesystemen</li>
                 <li>Luchtbehandelinginstallaties</li>
+                <li>Warmtepompinstallaties</li>
             </ul>
         </div>
     </div>
