--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@ permalink: /contact
     Diana 54 <br />
     6681 PM Bemmel <br />
     <br />
-    Tel. 0481 - 45 04 83 <br />
-    GSM 06 - 53 68 33 25 <br />
+    Tel. <a href="tel:0031481450483" class="text-dark">0481 - 45 04 83</a>  <br />
+    GSM <a href="tel:0031653683325" class="text-dark">06 - 53 68 33 25 <br />
     <br />
-    info@setobemmel.nl <br />
+    info<code>@</code>setobemmel.nl <br />
     <br />
     KvK Centraal Gelderland nr. 10039803
 </p>
