--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ permalink: /contact
     6681 PM Bemmel <br />
     <br />
     Tel. <a href="tel:0031481450483" class="text-dark">0481 - 45 04 83</a>  <br />
-    GSM <a href="tel:0031653683325" class="text-dark">06 - 53 68 33 25 <br />
+    GSM <a href="tel:0031653683325" class="text-dark">06 - 53 68 33 25</a> <br />
     <br />
     info<code>@</code>setobemmel.nl <br />
     <br />
