--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ permalink: /contact
     Tel. <a href="tel:0031481450483" class="text-dark">0481 - 45 04 83</a>  <br />
     GSM <a href="tel:0031653683325" class="text-dark">06 - 53 68 33 25</a> <br />
     <br />
-    info<code class=""text-dark>@</code>setobemmel.nl <br />
+    info<code class="text-dark">@</code>setobemmel.nl <br />
     <br />
     KvK Centraal Gelderland nr. 10039803
 </p>
